2009-09-28  Don Porter  <dgp@users.sourceforge.net>

	* generic/tclAlloc.c:		Cleaned up various routines in the
	* generic/tclCkalloc.c:		call stacks for memory allocation to
	* generic/tclParse.c:		guarantee that any size values computed
	* generic/tclThreadAlloc.c:	are within the domains of the routines
	they get passed to.  [Bugs 2557696 and 2557796].

2009-09-18  Don Porter  <dgp@users.sourceforge.net>

	* generic/tclCmdMZ.c (Tcl_SubstObj):	Pass 'length' values to
	recursive parsing calls to convert O(N^2) operations of [subst]
	to O(N).

2009-08-25  Andreas Kupries  <andreask@activestate.com>

	* generic/tclBasic.c (Tcl_CreateInterp, Tcl_EvalTokensStandard,
	EvalTokensStandard, Tcl_EvalEx, EvalEx, TclAdvanceContinuations,
	TclEvalObjEx):
	* generic/tclCmdMZ.c (Tcl_SwitchObjCmd, ListLines):
	* generic/tclCompCmds.c (*):
	* generic/tclCompile.c (TclSetByteCodeFromAny, TclInitCompileEnv,
	TclFreeCompileEnv, TclCompileScript):
	* generic/tclCompile.h (CompileEnv):
	* generic/tclInt.h (ContLineLoc, Interp):
	* generic/tclObj.c (ThreadSpecificData, ContLineLocFree,
	TclThreadFinalizeObjects, TclInitObjSubsystem,
	TclContinuationsEnter, TclContinuationsEnterDerived,
	TclContinuationsCopy, TclContinuationsGet, TclFreeObj):
	* generic/tclProc.c (TclCreateProc):
	* generic/tclVar.c (TclPtrSetVar):
	* tests/info.test (info-30.0-22):

	Extended parser, compiler, and execution with code and attendant
	data structures tracking the positions of continuation lines which
	are not visible in script's, to properly account for them while
	counting lines for #280, during direct and compiled execution.

2009-08-17  Don Porter  <dgp@users.sourceforge.net>

	* generic/tclFileName.c: Correct result from [glob */test] when *
	* tests/fileName.test:	matches something like ~foo.  [Bug 2837800]

2009-07-23  Joe Mistachkin  <joe@mistachkin.com>

	* generic/tclNotify.c: Fix for [Bug 2820349].

2009-07-14  Andreas Kupries  <andreask@activestate.com>
