@@ -1,3 +1,8 @@
+2009-10-04  Daniel Steffen  <das@users.sourceforge.net>
+
+	* macosx/tclMacOSXBundle.c:	Workaround CF memory managment bug in
+	* unix/tclUnixInit.c:		Mac OS X 10.4 & earlier. [Bug 2569449]
+
 2009-09-28  Don Porter  <dgp@users.sourceforge.net>
 
 	* generic/tclAlloc.c:		Cleaned up various routines in the
